daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N24_bad_private_payload_encoding/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae30158404334531d2385f6d51f3a3af132ce913b44dac145ffe8da6c0d978f8efde12c77afbb9578f3a57a4eefa4d080e2f551bc1742c72af2c6b59c30f0b475f05e6fbd01f602f6
